hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_no_await.php
<?hh

async function f() {
  concurrent {
    await genx();
    geny();
  }
}
